--- a/01-HTML-CSS/09-animations/CSSfinal pro/CSSfinal pro2/style.scss
+++ b/01-HTML-CSS/09-animations/CSSfinal pro/CSSfinal pro2/style.scss
@@ -992,7 +992,7 @@ input {
 
     }
 
-    .fruits:hover {
+    .cart:hover {
         animation-name: wiggle;
         animation-duration: 500ms;
         animation-iteration-count: 1;
@@ -1027,6 +1027,11 @@ input {
         border-radius: 10%;
         width: 5em;
         text-align: center;
+    }
+    .fruits:hover{
+        transform: scale(1.1);
+        transition: all 0.4s ease-out;
+
     }
 
 }
