--- a/01-HTML-CSS/09-animations/chaim/style.scss
+++ b/01-HTML-CSS/09-animations/chaim/style.scss
@@ -9,14 +9,14 @@ body{
     
 }
 
-.box1>img{
+.section>img{
   width: 100%;
   height: 100%;
  border-radius: 30px; 
  position: relative;
  bottom: 20px;
 }  
-img:hover{
+.hover{
     cursor: pointer;
   
     
@@ -46,7 +46,7 @@ h1{
    right: 20vh;
     color: orangered;
 }
- .box1>h4{
+ h4{
     position: relative;
     left:  180vh;
     bottom: 11vh;
@@ -79,8 +79,6 @@ h1{
         font-style: italic;
         font-weight: bold;
 }
-
-
   .container2 {
     width:100%;
     height:20vh;
