--- a/01-HTML-CSS/09-animations/tamir/tamir2.scss
+++ b/01-HTML-CSS/09-animations/tamir/tamir2.scss
@@ -1,6 +1,8 @@
 body {
     background-color: rgba(173, 179, 170, 0.507);
     margin: 3%;
+
+
 }
 
 .wrappernav {
@@ -24,6 +26,8 @@ body {
 }
 
 .wrapperfirst {
+
+
     ul {
         margin: 20px;
         padding: 0%;
@@ -32,12 +36,25 @@ body {
         align-items: center;
         height: 50px;
         background-color: white;
-        border-radius: 20PX;
+        border-radius: 10PX;
+
 
         :hover {
-            background-color: rgb(163, 162, 162);
-            border-radius: 20px;
+            background-color: hsla(0, 0%, 0%, 0.774);
+            border-radius: 10px;
+            box-shadow: 10px 10px 5px;
+            font-size: 1.5em;
+
         }
+
+        :nth-child(3):hover {
+            box-shadow: -10px 10px 5px;
+        }
+
+        :nth-child(2):hover {
+            box-shadow: 0px 10px 5px;
+        }
+
     }
 
     a {
@@ -49,7 +66,9 @@ body {
         color: black;
         font-weight: bold;
         font-family: Arial, Helvetica, sans-serif;
+
     }
+
 }
 
 .wrapper {
@@ -69,9 +88,11 @@ body {
         border-radius: 4px;
         margin-right: 6px;
     }
+
     &__info {
         font-weight: bold;
         font-size: 1.4em;
+        color: rgb(0, 0, 0);
         font-family: Arial, Helvetica, sans-serif;
         padding-right: 30px;
 
@@ -79,6 +100,7 @@ body {
             cursor: pointer;
             color: black;
         }
+        
     }
 
     &__button {
@@ -86,13 +108,15 @@ body {
         width: 20px;
         height: 20px;
         border-radius: 40px;
-        background-color: rgb(0, 0, 0);
+        background-color: hsla(0, 0%, 0%, 0.774);
         text-align: center;
 
         :hover {
-            cursor: pointer;
+            cursor: no-drop
         }
     }
+
+    
 
     &__num {
         color: white;
@@ -117,7 +141,11 @@ body {
         height: 20px;
         border-radius: 40px;
         text-align: center;
-        background-color: hsl(0, 0%, 0%);
+        background-color: hsla(0, 0%, 0%, 0.774);
+
+        :hover {
+            cursor: no-drop
+        }
     }
 }
 
@@ -169,6 +197,7 @@ body {
     position: relative;
     margin: -30%;
     display: inline-block;
+    border-radius: 20px;
 
     &__btn {
         background-color: rgb(163, 162, 162);
@@ -176,6 +205,9 @@ body {
         padding: 6px;
         font-size: 16px;
         border: none;
+        cursor: pointer;
+        border-radius: 5px;
+        background-color: hsla(0, 0%, 0%, 0.774);
     }
 
     .drop:hover &__content {
@@ -186,6 +218,7 @@ body {
     &__content {
         display: none;
         position: absolute;
+        border-radius: 20px;
         background-color: #f1f1f1;
         min-width: 160px;
         box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
@@ -197,16 +230,19 @@ body {
             display: block;
             font-family: Arial, Helvetica, sans-serif;
             color: rgb(0, 0, 0);
+            border-radius: 20px;
+            opacity: 0.5;
         }
 
         a:hover {
             background-color: rgb(163, 162, 162);
             text-decoration: underline;
+            text-decoration-color: red;
+            -webkit-text-decoretion-color: red;
+            opacity: 1;
         }
     }
 }
-
-
 
 @media only screen and(min-width: 670px) {
     .wrapperfirst {
@@ -267,20 +303,24 @@ body {
             font-size: 2rem;
         }
     }
+
     .drop {
         &__btn {
             border-radius: 20px;
-            padding: 23px; 
+            padding: 23px;
         }
-    
+
         .drop:hover &__content {
             border-radius: 20px;
         }
-    
+
         &__content {
             a:hover {
                 border-radius: 20px;
                 text-decoration: underline;
+                text-decoration-color: red;
+                -webkit-text-decoretion-color: red;
+
             }
         }
     }
