--- a/01-HTML-CSS/09-animations/Plant App Leo Shani Alex/style.scss
+++ b/01-HTML-CSS/09-animations/Plant App Leo Shani Alex/style.scss
@@ -21,10 +21,14 @@ body {
         position: absolute;
         left: 6%;
         top: 5vh;
-
-        &:hover {
-            cursor: pointer;
+        a{
+            color: black;
+          
+                cursor: pointer;
+            
         }
+
+       
         
     }
 
@@ -150,6 +154,9 @@ body {
         align-items: center;
         width: 20%;
         height: 20%;
+        a{
+            color: black;
+        }
 
         i {
             position: relative;
@@ -290,7 +297,14 @@ section {
 @media screen and (min-width: 700px) {
 
     .plantsGrid {
-        grid-template-rows: repeat(4, 20%);
+        position: relative;
+        left: 4%;
+        width: 85%;
+        height: 150vh;
+        display: grid;
+        gap: 8px;
+        grid-template-columns: repeat(3, 1fr);
+        grid-template-rows: repeat(2, 1fr);
 
 
         &_plantsGrid_boxitem {
@@ -303,6 +317,7 @@ section {
 
         }
     }
+  
 }
 
 
