--- a/01-HTML-CSS/09-animations/group7_Shay_Jhon_Omri/shay/style.scss
+++ b/01-HTML-CSS/09-animations/group7_Shay_Jhon_Omri/shay/style.scss
@@ -749,10 +749,15 @@ body {
             font-size: 200px;
             color: blueviolet;
             margin: auto;
-            animation-duration: 3s;
+            border-radius: 100px;
+            background-image: linear-gradient(to bottom right, rgb(16, 176, 250), rgba(247, 0, 255, 0.932));
+            margin: auto;
+            animation-name: rorate;
+            animation-duration: 2s;
             animation-delay: 1s;
             animation-direction: reverse;
-             animation-timing-function: ease-in-out;
+            animation-timing-function: ease-in-out;
+
         }
 
 
@@ -773,16 +778,23 @@ body {
     }
     .graphic{
         display: flex;
-        justify-content: space-between;
+    }
+    .graph1{
+        width:300px; height:100px;  
+        border:solid 5px #000;
+        border-color:rgb(250, 244, 244) transparent transparent transparent;
+        border-radius: 50%/100px 100px 0 0;
+      }
+      .graph2{
+        width: 300px;
+        height: 100px;
+        border: solid 5px #000;
+        border-color: transparent transparent rgb(240, 232, 232) transparent;
+        border-radius: 0 0 240px 50%/60px;
+      }
 
-        &__graph{
-            width:500px; height:100px;  
-            border:solid 5px rgb(196, 188, 188);
-            border-color:rgb(192, 183, 183) transparent transparent transparent;
-            border-radius: 150%/100px 100px 0 0;
-        }
-        
-        
+      .day{
+        color: rgba(255, 235, 205, 0.432);
       }
 
     .hours {
