--- a/01-HTML-CSS/09-animations/Andrew, Ohad, Yahia/style.scss
+++ b/01-HTML-CSS/09-animations/Andrew, Ohad, Yahia/style.scss
@@ -368,16 +368,18 @@
 //yahya alhawjra-->page exchange
 //yahya start
 .menu{
-   
+    display: flex;
+        flex-wrap: row;
     il{
         text-decoration: inline;
-        
+       
         text-align: center;
         justify-content: center;
         color: var(--color-lighter-grey);
         border-radius: 10px;
-        font-size: xx-large;
+        font-size: x-large;
         margin: 10px;
+        
       }
 
 
@@ -398,6 +400,13 @@ p{
     font-size: 18px;
 }
 }
+body{
+           background-color: var(--color-light-grey);
+           width: 500px;
+           border-radius: 15px;
+
+}
+
    .wrapper{
        display: flex;
        flex-wrap: row;
@@ -428,23 +437,15 @@ p{
    }
    .button-change{
        margin-top: 50px;
-       margin-left: 8%;
+       margin-left: 40%;
        justify-content: center;
        align-items: center;
    }
 
-@media only screen and(max-width:600px) {
-    .button-change{
-        margin: 0;
-        margin-top: 50px;
-        margin-left: 50%;
-        justify-content: center;
-       align-items: center;
-    }
-}
+
 .wrapper2{
     margin-left: 5px;
-    margin-top: 300px;
+    margin-top: 400px;
     display: flex;
     position: absolute;
     flex-wrap: row;
@@ -453,37 +454,73 @@ p{
 }
 .your-Exchange{
     position: absolute;
-    
+    margin-top: 600px;
+    padding: 50px;
     height: 20px;
-    background-color: var(--color-light-grey);
-   
+    background-color: var(--color-lighter-grey);
+
     
     &__result{
         height: 100px;
         justify-content: center;
+        padding: 0px;
+     margin-left: 50px;
         border-radius: 15px;
         width: 400px;
         background-color: var(--color-light-grey);
          display: flex;
          flex-wrap: row;
         margin-top: 300px;
+        
         .text{
             color: var(--color-light-green);
             justify-content: center;
             text-align: center;
-            font-size: 28px;
-
-
+            font-size: 28px; 
+            margin-top: 30px;
+            
+            
+            
         }
         .theresult{
-           
+           margin-top: 30px;
             input{
                 font-size:large;
+                font-family: system-ui;
+
             }
 
         }
 
     }
+   
 }
+.footer2{
+    margin-top: 600;
+    float: left;
+    position:absolute;
+    margin-left: 5px;
     
+    
+    
+    
+}
+@media only screen and(max-width:600px) {
+    .button-change{
+        margin: 0;
+        margin-top: 50px;
+        margin-left: 50%;
+        justify-content: center;
+       align-items: center;
+    }
+}   
+@media only screen and(max-width:300px) {
+    .button-change{
+        margin: 0;
+        margin-top: 50px;
+        margin-left: 50%;
+        justify-content: center;
+       align-items: center;
+    }
+}
 /*yahya END*/
