--- a/01-HTML-CSS/09-animations/Andrew/final project/style.scss
+++ b/01-HTML-CSS/09-animations/Andrew/final project/style.scss
@@ -21,15 +21,13 @@
     --color-axs: #9CAAE7;
     --color-xlm: #33CFFF;
     --width: 85vw;
+    --animation-time: 3s;
     background-color: var(--color-dark-grey);
     color: var(--color-white);
     font-family: Arial, Helvetica, sans-serif;
 }
-div{
-    box-shadow: 0px 0px 0px 1px red;
-}
 
-body{
+body {
     margin-top: 20px;
     display: flex;
     flex-direction: column;
@@ -41,24 +39,24 @@ body{
     display: flex;
     justify-content: space-between;
     width: 90vw;
-    @media only screen and (min-width: 1200px){
+
+    @media only screen and (min-width: 1200px) {
         width: 50vw;
     }
 
     &__icon {
-        z-index: 999;
         perspective: 300px;
         perspective-origin: 300%;
         position: relative;
         border: 1px solid var(--color-light-grey);
         border-radius: 10px;
         width: 50px;
-        height: 50px;
+        aspect-ratio: 1;
         background-color: var(--color-dark-grey);
 
         svg {
             width: 30px;
-            height: 30px;
+            aspect-ratio: 1;
             fill: var(--color-orange);
         }
 
@@ -78,7 +76,7 @@ body{
             top: 0px;
             left: 0px;
             width: 300px;
-            height: 300px;
+            aspect-ratio: 1;
             background-color: #2E3137B0;
             border-radius: 10px;
             border: 1px solid var(--color-white);
@@ -107,7 +105,7 @@ body{
                     margin: 25px;
                     fill: var(--color-white);
                     width: 180px;
-                    height: 180px;
+                    aspect-ratio: 1;
                 }
             }
         }
@@ -125,7 +123,7 @@ body{
                 top: -9px;
                 right: -9px;
                 width: 20px;
-                height: 20px;
+                aspect-ratio: 1;
                 line-height: 20px;
                 background-color: #c05711;
                 border-radius: 5px;
@@ -133,7 +131,7 @@ body{
             }
         }
 
-        --animation-time: 3s;
+
 
         &:hover {
             .header__icon__notification {
@@ -248,7 +246,8 @@ body{
                 font-size: 0.8rem;
                 line-height: 50px;
                 padding-left: 10px;
-                @media only screen and (min-width: 600px){
+
+                @media only screen and (min-width: 600px) {
                     width: 300px;
                     font-size: 1rem;
                 }
@@ -377,18 +376,6 @@ body{
     }
 }
 
-@keyframes flop-shadow-extend {
-    0% {
-        height: 302px;
-    }
-
-    100% {
-        height: 302px;
-        width: 350px;
-        transform: translateX(-300px);
-    }
-}
-
 @keyframes flop {
     0% {
         visibility: visible;
@@ -435,6 +422,29 @@ body{
     }
 }
 
+@keyframes spinY {
+    0% {
+        transform: rotateY(0deg);
+    }
+
+    100% {
+        transform: rotateY(360deg);
+    }
+}
+
+@keyframes coin2 {
+    to {
+        transform: translateX(8px);
+        filter: drop-shadow(-2px 0px 0px #7E8082);
+    }
+}
+
+@keyframes coin1 {
+    to {
+        transform: translateX(-8px);
+    }
+}
+
 .footer {
     display: flex;
     justify-content: center;
@@ -445,15 +455,18 @@ body{
     background-color: var(--color-light-grey);
     border-radius: 20px;
     margin: 2vw;
-    @media only screen and (min-width: 1200px){
+
+    @media only screen and (min-width: 1200px) {
         width: 50vw;
     }
+
     &-container {
         width: 100%;
         display: flex;
         justify-content: space-evenly;
         color: var(--color-lighter-grey);
         font-size: 0.9rem;
+        perspective: 300px;
 
         * {
             padding: 10px;
@@ -461,6 +474,9 @@ body{
 
         &__market {
             position: relative;
+            background-color: var(--color-light-grey);
+            border-radius: 10px;
+            transition: ease 500ms;
 
             svg {
                 margin-top: -10px;
@@ -469,17 +485,32 @@ body{
             }
 
             &::after {
-                content: 'Wallet';
+                content: 'Market';
                 position: absolute;
                 bottom: 10px;
                 left: 15px;
+            }
+
+            &:hover {
+                transform: scale(1.05) translateY(-30px);
+                box-shadow:
+                    0px -5px 5px 0px black, 0px 5px 0px 0px var(--color-light-grey);
+
+                &.footer-container__market>svg {
+                    animation: spinY 5s infinite linear;
+                }
             }
         }
 
         &__exchange {
             position: relative;
             width: 90px;
-            
+            background-color: var(--color-light-grey);
+            border-radius: 10px;
+            transition: ease 500ms;
+            perspective: 100px;
+            perspective-origin: 50% -10%;
+
             svg {
                 position: absolute;
                 top: -45px;
@@ -493,21 +524,41 @@ body{
 
                 .st2 {
                     fill: var(--color-white);
-                    filter: drop-shadow(2px 0px #7E8082);
+                    filter: drop-shadow(2px 0px 0px #7E8082);
                 }
             }
-            
+
             &::after {
                 content: 'Exchange';
                 position: absolute;
                 bottom: 10px;
                 left: 24px;
-                
+
+            }
+
+            &:hover {
+                transform: scale(1.05) translateY(-30px);
+                box-shadow: 0px 18px 0px 0px var(--color-light-grey),
+                    0px -5px 5px 0px black, 0px 5px 0px 0px var(--color-light-grey);
+
+                .st1 {
+                    animation: coin1 1s infinite cubic-bezier(.8, 0, .2, 1) alternate;
+                }
+
+                .st2 {
+                    animation: coin2 1s infinite cubic-bezier(.9, 0, .1, 1) alternate;
+
+                }
             }
         }
 
         &__wallet {
             position: relative;
+            background-color: var(--color-light-grey);
+            border-radius: 10px;
+            transition: ease 500ms;
+            perspective: 100px;
+            perspective-origin: 50% -10%;
 
             svg {
                 margin-top: -10px;
@@ -520,6 +571,17 @@ body{
                 position: absolute;
                 bottom: 10px;
                 left: 20px;
+            }
+
+            &:hover {
+                transform: scale(1.05) rotateX(-5deg) translateY(-30px);
+                box-shadow: 0px 18px 0px 0px var(--color-light-grey),
+                    0px -5px 5px 0px black, 0px 5px 0px 0px var(--color-light-grey);
+
+                &.footer-container__wallet>svg {
+                    animation: spinY 5s infinite linear;
+
+                }
             }
         }
     }
@@ -663,11 +725,17 @@ body{
         width: var(--width);
         aspect-ratio: 1;
         position: relative;
-        border: 1px solid blue;
-        @media only screen and (min-width: 1200px){
+
+        @media only screen and (min-width: 1200px) {
             width: 50vw;
-            left: -20px;
+            left: -90px;
         }
+
+        @media only screen and (min-width: 1600px) {
+            width: 50vw;
+            left: 50px;
+        }
+
         &__grid {
             perspective: 1000px;
             position: absolute;
@@ -676,14 +744,25 @@ body{
             aspect-ratio: 1;
             grid-template-columns: repeat(5, 1fr);
             grid-template-rows: repeat(5, 1fr);
-            @media only screen and (min-width: 1200px){
+
+            @media only screen and (min-width: 1200px) {
                 width: 50vw;
             }
+
+            @media only screen and (min-width: 1600px) {
+                width: 35vw;
+            }
+
             &__cell {
                 width: calc(var(--width)/5);
                 aspect-ratio: 1;
-                @media only screen and (min-width: 1200px){
+
+                @media only screen and (min-width: 1200px) {
                     width: 10vw;
+                }
+
+                @media only screen and (min-width: 1600px) {
+                    width: 7vw;
                 }
             }
 
@@ -834,18 +913,30 @@ body{
                 align-items: center;
                 height: var(--width);
                 overflow: hidden;
-                @media only screen and (min-width: 1200px){
+
+                @media only screen and (min-width: 1200px) {
                     height: 50vw;
                 }
+
+                @media only screen and (min-width: 1600px) {
+                    height: 35vw;
+                }
+
 
                 svg {
                     position: absolute;
                     width: calc(var(--width)*0.9);
                     aspect-ratio: 1;
                     animation: spin 30s linear infinite;
-                    @media only screen and (min-width: 1200px){
-                        width: 45vw;
+
+                    @media only screen and (min-width: 1200px) {
+                        width: 40vw;
                     }
+
+                    @media only screen and (min-width: 1600px) {
+                        width: 30vw;
+                    }
+
                     //border: 1px solid red;
                     //border-radius: 50%;
                 }
@@ -856,7 +947,7 @@ body{
 
                     &::before {
                         content: 'WALLET VALUE';
-                        
+
                         position: absolute;
                         font-size: 0.5em;
                         color: var(--color-lighter-grey);
@@ -880,9 +971,19 @@ body{
 
     &-portfolio {
         margin-bottom: 90px;
-        @media only screen and (min-width: 1200px){
+
+        @media only screen and (min-width: 1200px) {
             width: 45vw;
+            position: absolute;
+            right: 20px;
+            top: 130px;
         }
+
+        @media only screen and (min-width: 1600px) {
+            width: 35vw;
+            right: 200px;
+        }
+
         &__title {
             display: flex;
             justify-content: space-between;
@@ -901,7 +1002,7 @@ body{
 
         &__list {
             position: relative;
-            perspective: 200px;
+
             &__item {
                 display: flex;
                 height: 60px;
@@ -911,11 +1012,13 @@ body{
                 transition: ease 300ms;
                 border-radius: 10px;
                 perspective: 200px;
-                &:hover{
-                    transform:scale(1.05) ;
-                    box-shadow: 0px 0px 5px 2px ;
-                    .wallet-portfolio__list__item__graph>img{
-                        animation: graph 5s ease-in-out infinite alternate;
+
+                &:hover {
+                    transform: scale(1.05);
+                    box-shadow: 0px 0px 5px 2px;
+
+                    .wallet-portfolio__list__item__graph>img {
+                        animation: graph 5s ease-out infinite alternate;
                     }
                 }
 
@@ -923,7 +1026,7 @@ body{
                     background-color: var(--color-mid-grey);
                     border-radius: 25%;
                     width: 50px;
-                    height: 50px;
+                    aspect-ratio: 1;
                     margin: 5px;
 
                     svg {
@@ -950,31 +1053,56 @@ body{
                     position: absolute;
                     left: 135px;
                     width: 60px;
-                    @media only screen and (min-width: 341px){
+
+                    @media only screen and (min-width: 341px) {
                         width: 90px;
                     }
-                    @media only screen and (min-width: 375px){
+
+                    @media only screen and (min-width: 375px) {
                         width: 110px;
                     }
-                    @media only screen and (min-width: 540px){
+
+                    @media only screen and (min-width: 540px) {
                         width: 250px;
                     }
-                    @media only screen and (min-width: 748px){
-                        width: 400px;
+
+                    @media only screen and (min-width: 748px) {
+                        width: 390px;
                     }
+
                     height: 70px;
-                    border: 1px solid var(--color-light-grey);
                     overflow: hidden;
+
                     img {
                         position: absolute;
                         top: -7vw;
                         width: 60vw;
                         aspect-ratio: 3;
-                        @media only screen and (min-width: 748px){
+
+                        @media only screen and (min-width: 748px) {
                             top: -7vw;
                             width: 60vw;
                             aspect-ratio: 4;
                         }
+
+                        @media only screen and (min-width: 748px) {
+                            top: -6vw;
+                            width: 80vw;
+                            aspect-ratio: 7;
+                        }
+
+                        @media only screen and (min-width: 748px) {
+                            top: -6vw;
+                            width: 80vw;
+                            aspect-ratio: 7;
+                        }
+
+                        @media only screen and (min-width: 1920px) {
+                            top: -4vw;
+                            width: 50vw;
+                            aspect-ratio: 7;
+                        }
+
                     }
                 }
 
@@ -987,7 +1115,8 @@ body{
                     :first-child {
                         font-size: 1em;
                     }
-                    p{
+
+                    p {
                         font-size: 0.8em;
                     }
 
@@ -1002,92 +1131,11 @@ body{
             }
         }
     }
-    
+
     @keyframes graph {
-        
-        to{transform: translateX(-90px);}
+
+        to {
+            transform: translateX(-90px);
+        }
     }
-
-    // &-cards {
-    //     margin-block:200px ;
-    //     perspective: 600px;
-    //     &__scene {
-    //         margin-bottom: 200px;
-    //         width: 600px;
-    //         border: 1px solid red;
-    //         display: flex;
-    //         justify-content: center;
-    //         transform-style: preserve-3d;
-    //         transform: rotateY(10deg);
-    //         animation: rotate 5s infinite ;
-    //         // &:hover {
-
-    //         //     .wallet-cards__front {}
-
-    //         //     .wallet-cards__back {}
-    //         // }
-
-    //         &__side {
-    //             position: relative;
-    //             border: 1px solid var(--color-lighter-grey);
-    //             width: 240px;
-    //             height: 180px;
-    //             background-image: url(https://media.istockphoto.com/photos/luxury-black-leather-texture-surface-background-picture-id1283599807?b=1&k=20&m=1283599807&s=170667a&w=0&h=pARfZM-2iXG_jNmGBwCsDQ2o0EU76Iwddw5lqG2SGC8=);
-    //             overflow: hidden;
-    //             perspective: 600px;
-    //             transform-style: preserve-3d;
-    //             .pocket {
-    //                 position: absolute;
-    //                 top: 30px;
-    //                 right: -40px;
-    //                 border: 3px dashed var(--color-link);
-    //                 width: 300px;
-    //                 height: 150px;
-    //                 transform: translateX(150px);
-    //                 background-image: url(https://media.istockphoto.com/photos/luxury-black-leather-texture-surface-background-picture-id1283599807?b=1&k=20&m=1283599807&s=170667a&w=0&h=pARfZM-2iXG_jNmGBwCsDQ2o0EU76Iwddw5lqG2SGC8=);
-    //             }
-
-    //             .lower {
-    //                 position: absolute;
-    //                 top: 70px;
-    //                 right: -40px;
-    //                 width: 300px;
-    //                 height: 150px;
-    //             }
-    //         }
-
-    //         &__mid {
-    //             border: 1px solid var(--color-lighter-grey);
-    //             width: 10px;
-    //             height: 180px;
-    //             background-image: url(https://media.istockphoto.com/photos/luxury-black-leather-texture-surface-background-picture-id1283599807?b=1&k=20&m=1283599807&s=170667a&w=0&h=pARfZM-2iXG_jNmGBwCsDQ2o0EU76Iwddw5lqG2SGC8=);
-    //         }
-
-    //         .front {
-    //             border-radius: 20px 0 0 20px;
-
-    //             .pocket {
-    //                 transform: rotateZ(-15deg);
-    //             }
-
-    //             transform-origin: right;
-    //             transform: rotateY(30deg);
-    //         }
-
-    //         .back {
-    //             border-radius: 0 20px 20px 0;
-
-    //             .pocket {
-    //                 transform: rotateZ(15deg);
-    //             }
-
-    //             transform: rotateY(-30deg);
-    //             transform-origin: left;
-    //         }
-
-    //     }
-    // }
 }
-
-//andrew end
-//yahya alhawjra-->page exchange
