--- a/01-HTML-CSS/09-animations/group7_Shay_Jhon_Omri/shay/style.scss
+++ b/01-HTML-CSS/09-animations/group7_Shay_Jhon_Omri/shay/style.scss
@@ -606,16 +606,14 @@ body {
 
                 }
             }
-
             .bar {
 
                 margin: auto;
-                padding-top: 50px;
-                padding-left: 70px;
-                padding-bottom: 20px;
                 display: grid;
-                grid-template-columns: repeat(4, 1fr);
-
+                grid-template-columns: repeat(4, 2fr);
+                grid-template-rows: 1fr;
+                gap: 180px;
+    
                 &__icons {
                     #active:target {
                         color: #7b446a;
@@ -1465,11 +1463,9 @@ body {
                         
                     }
             .bar {
-                padding-top: 40px;
-                padding-left: 70px;
                 display: grid;
                 grid-template-columns: repeat(4, 1fr);
-
+                gap: 80px;
             }
         
         }
