--- a/01-HTML-CSS/09-animations/group7_Shay_Jhon_Omri/shay/style.scss
+++ b/01-HTML-CSS/09-animations/group7_Shay_Jhon_Omri/shay/style.scss
@@ -643,116 +643,199 @@ body {
             }
         }
     
-
-    .details {
-        background: rgba(19, 27, 36, 0.877);
-        max-width: 600px;
-        margin: auto;
-        display: grid;
-        grid-template-columns: 6fr;
-        grid-template-rows: 0.8fr 1.6fr 0.8fr 0.3fr 1fr 1fr;
-        color: honeydew;
-
-
-        &__location {
-            margin-top: 20px;
+        .details {
+            background: #1d2a35;
+            max-width: 1370px;
+            margin: auto;
             display: grid;
-            grid-template-rows: repeat(2 1fr);
-
-            .fas {
-                color: gray;
-                margin: auto;
+            grid-template-columns: 6fr;
+            grid-template-rows: 0.8fr 1.6fr 0.8fr 0.3fr 1fr 0.8fr;
+            border-radius: 15px;
+            color: #e1e3e2;
+    
+    
+            &__location {
+                margin-top: 20px;
+                display: grid;
+                grid-template-rows: repeat(2 1fr);
+    
+                .text {
+                    font-family: 'Roboto', sans-serif;
+                    font-weight: 500;
+                    font-size: 95%;
+                }
+    
+                .fas {
+                    color: gray;
+                    margin: auto;
+                }
+    
+                p {
+                    justify-self: center;
+                    margin-top: -10px;
+                }
+    
             }
-
-            p {
+    
+            &__dayTime {
+                display: flex;
+                flex-direction: column;
+    
+    
+                .ball {
+                    width: 150px;
+                    height: 150px;
+                    border-radius: 100px;
+                    background-image: linear-gradient(to bottom right, rgb(16, 176, 250), rgba(247, 0, 255, 0.932));
+                    box-shadow: 0px 0px 80px -15px rgba(196, 208, 211, 0.884);
+                    margin: auto;
+                    animation-name: rorate;
+                    animation-duration: 3s;
+                    animation-delay: 1s;
+                    animation-iteration-count: infinite;
+                    animation-direction: reverse;
+                    animation-timing-function: ease-in-out;
+                }
+    
+    
+                .card {
+                    width: 100px;
+                    height: 20px;
+                    text-align: center;
+                    padding: 0.5%;
+                    border-radius: 40px;
+                    margin: auto;
+                    background: #353361;
+                }
+            }
+    
+            &__temp {
                 justify-self: center;
-                margin-top: -10px;
+                font-size: 3rem;
             }
-
-        }
-
-        &__dayTime {
-            display: flex;
-            flex-direction: column;
-            //border: black solid 1px;
-
-            .ball {
-                width: 150px;
-                height: 150px;
-                border-radius: 100px;
-                background-image: linear-gradient(to bottom right, rgb(16, 176, 250), rgba(247, 0, 255, 0.932));
-                margin: auto;
-                animation-name: rorate;
-                animation-duration: 3s;
-                animation-delay: 1s;
-                animation-iteration-count: infinite;
-                animation-direction: reverse;
-                animation-timing-function: ease-in-out;
-            }
-
-
-            .card {
-                width: 100px;
-                height: 20px;
-                text-align: center;
-                padding: 0.5%;
-                border-radius: 40px;
-                margin: auto;
-                background: rgba(124, 49, 223, 0.295);
-            }
-        }
-
-        &__temp {
-            justify-self: center;
-            font-size: 3rem;
-        }
-
-        &__current {
-            display: flex;
-            justify-content: center;
-            gap: 30px;
-
-            .data {
+    
+            &__current {
+                display: flex;
                 justify-content: center;
-
-                span {
-                    margin-left: 10px;
-                }
-            }
-
-            .fas {
-                color: cornflowerblue;
-            }
-        }
-
-        &__general {
-            display: grid;
-            grid-template-columns: 1fr 1fr;
-            grid-template-rows: repeat(3 1fr);
-            margin: 0% 15%;
-
-            .measure {
-
-                &_units {
-                    justify-self: end;
-                    color: rgb(51, 89, 158);
-
-                    .fas {
-                        color: honeydew;
-                        font-size: 12px;
-                    }
-
+                gap: 30px;
+    
+                .data {
+                    justify-content: center;
+    
                     span {
-                        margin-right: 10px;
+                        margin-left: 10px;
                     }
                 }
+    
+                .fas {
+                    color: #6686b6;
+                }
             }
-
-
-
+    
+            &__general {
+                display: grid;
+                grid-template-columns: 1fr 1fr;
+                grid-template-rows: repeat(3 1fr);
+                margin: 0% 15%;
+    
+                .measure {
+    
+                    &_units {
+                        justify-self: end;
+                        color: #3c586d;
+    
+    
+                        .fas {
+                            color: honeydew;
+                            font-size: 12px;
+                        }
+    
+                        span {
+                            margin-right: 10px;
+                        }
+                    }
+                }
+    
+            }
+    
+            .bar {
+                display: flex;
+                justify-content: space-around;
+                margin: 8%;
+            }
+    
         }
-
-    }
+    
+        @media only screen and(max-width:1024px) {
+    
+            .details {
+    
+                &__general {
+    
+                    margin: 0% 10%;
+                }
+    
+                .bar {
+    
+                    justify-content: space-between;
+                    margin: 15%;
+                }
+    
+            }
+    
+        }
+    
+    
+        @media only screen and(max-width:320px) {
+    
+            .details {
+    
+                &__general {
+    
+                    margin: 0% 10%;
+                }
+    
+                .bar {
+    
+                    justify-content: space-evenly;
+                    margin: 8%;
+                }
+    
+            }
+        }
+    
+        @media only screen and(max-width:280px) {
+    
+            .details {
+    
+                &__current {
+                    
+                    gap: 9px;
+    
+                    .data {
+                
+                        span {
+                            margin-left: 1px;
+                        }
+                    }
+                }
+    
+                &__general {
+    
+                    margin: 0% 5%;
+                }
+    
+                .bar {
+    
+                    justify-content: space-evenly;
+                    margin: 5%;
+                }
+    
+            }
+        }
+    
+    
+    
     .cont{
         max-width: 600px;
         margin: auto;
@@ -1285,115 +1368,7 @@ body {
             }
         
         }
-        .details {
-            background: rgba(19, 27, 36, 0.877);
-            max-width: 600px;
-            margin: auto;
-            display: grid;
-            grid-template-columns: 6fr;
-            grid-template-rows: 0.8fr 1.6fr 0.8fr 0.3fr 1fr 1fr;
-            color: honeydew;
-
-
-            &__location {
-                margin-top: 20px;
-                display: grid;
-                grid-template-rows: repeat(2 1fr);
-
-                .fas {
-                    color: gray;
-                    margin: auto;
-                }
-
-                p {
-                    justify-self: center;
-                    margin-top: -10px;
-                }
-
-            }
-
-            &__dayTime {
-                display: flex;
-                flex-direction: column;
-                //border: black solid 1px;
-
-                .ball {
-                    width: 150px;
-                    height: 150px;
-                    border-radius: 100px;
-                    background-image: linear-gradient(to bottom right, rgb(16, 176, 250), rgba(247, 0, 255, 0.932));
-                    margin: auto;
-                    animation-name: rorate;
-                    animation-duration: 3s;
-                    animation-delay: 1s;
-                    animation-iteration-count: infinite;
-                    animation-direction: reverse;
-                    animation-timing-function: ease-in-out;
-                }
-
-
-                .card {
-                    width: 100px;
-                    height: 20px;
-                    text-align: center;
-                    padding: 0.5%;
-                    border-radius: 40px;
-                    margin: auto;
-                    background: rgba(124, 49, 223, 0.295);
-                }
-            }
-
-            &__temp {
-                justify-self: center;
-                font-size: 3rem;
-            }
-
-            &__current {
-                display: flex;
-                justify-content: center;
-                gap: 30px;
-
-                .data {
-                    justify-content: center;
-
-                    span {
-                        margin-left: 10px;
-                    }
-                }
-
-                .fas {
-                    color: cornflowerblue;
-                }
-            }
-
-            &__general {
-                display: grid;
-                grid-template-columns: 1fr 1fr;
-                grid-template-rows: repeat(3 1fr);
-                margin: 0% 15%;
-
-                .measure {
-
-                    &_units {
-                        justify-self: end;
-                        color: rgb(51, 89, 158);
-
-                        .fas {
-                            color: honeydew;
-                            font-size: 12px;
-                        }
-
-                        span {
-                            margin-right: 10px;
-                        }
-                    }
-                }
-
-
-
-            }
-
-        }
+       
     }
     }
     
