--- a/01-HTML-CSS/09-animations/group7_Shay_Jhon_Omri/shay/style.scss
+++ b/01-HTML-CSS/09-animations/group7_Shay_Jhon_Omri/shay/style.scss
@@ -1683,13 +1683,11 @@ body {
                                 display: grid;
                                 grid-template-columns: repeat(5, 1fr);
                                 grid-row: 1;
-                                gap: 10px;
+                                gap: 4px;
                                 grid-column: 1;
                                 grid-template-rows: 1fr;
-
+                                margin-left: -16px;
                                 .rain {
-                                    grid-row: 1;
-                                    grid-column: 1;
                                     animation-name: rains;
                                     animation-duration: 1s;
                                     animation-delay: 2s;
