--- a/01-HTML-CSS/09-animations/group7_Shay_Jhon_Omri/shay/style.scss
+++ b/01-HTML-CSS/09-animations/group7_Shay_Jhon_Omri/shay/style.scss
@@ -642,7 +642,7 @@ body {
                 }
             }
         }
-    
+////// Omri Aharonov ///////   
         .details {
             background: #1d2a35;
             max-width: 1370px;
