--- a/01-HTML-CSS/09-animations/tamir/chaim/style.scss
+++ b/01-HTML-CSS/09-animations/tamir/chaim/style.scss
@@ -1,50 +1,145 @@
-<<<<<<< HEAD
-.wrapper2{
-  background-color: wheat; 
-
-&__container{
-    margin: 10px;
-    justify-content: space-between ;
-}
-=======
 .wrapper {
+  border-radius: 40px;
+  background-color: rgb(218, 212, 212);
+
+  img {
+    width: 100%;
+    height: 100%;
     border-radius: 40px;
-    background-color: rgb(218, 212, 212);
+  }
 
-    img {
-        width: 100%;
-        height: 100%;
-        border-radius: 40px;
+  &__h {
+    padding-left: 15px;
+  }
+
+  &__info {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+
+  &__subinfo {
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    margin: 10px;
+    padding-left: 10px;
+
+    i {
+      color: orange;
+
     }
-     &__h{
-         padding-left: 15px;
-     }
+
+  }
+
+  &__h3 {
+    padding-right: 20px;
+  }
+
+  &__h4 {
+    padding-right: 15px;
+  }
+}
+
+.container1 {
+  background-color: rgb(218, 212, 212);
+  display: grid;
+  grid-template-rows: repeat(3, 1fr);
+  grid-template-columns: repeat(2, 1fr);
+  text-align: center;
+  justify-content: space-between;
+  margin: 0vh;
+  border-radius: 30px;
+
+
+  .cont{
+    font-size: 3vh;
+    position: relative;
+   left: 50vh;
+  }
+}
+
+.container2 {
+  background-color: rgb(218, 212, 212);
+  justify-content: space-between;
+  margin: 0vh;
+  border-radius: 30px;
+  height: 150px;
+
+  h5 {
+    font-size: 3vh;
+    padding: 15px;
+  }
+
+  h6 {
+    font-size: 2vh;
+    position: relative;
+    left: 82vh;
+    bottom: 14vh;
+  }
+
+  i {
+    position: relative;
+    left: 95vh;
+    bottom: 22vh;
+  }
+}
+
+.container3 {
+  background-color: blue;
+  width: 100%;
+  height: 100px;
+  border-radius: 30px;
+  position: relative;
+  bottom: 170px;
+
+  h5 {
+    font-size: 5vh;
+    padding: 15px;
+    text-align: center;
+
+  }
+
+  :hover {
+
+    text-decoration: underline;
+    text-decoration-color: red;
+
+  }
+}
+
+@media only screen and(min-width: 670px) {
+
+  .wrapper {
+
     &__info {
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
+      font-size: 3em;
     }
-
-    &__subinfo {
-        display: flex;
-        justify-content: flex-start;
-        align-items: center;
-        margin: 10px;
-        padding-left: 10px;
-
-        i {
-            color: orange;
-            
-        }
-
+    &__h {
+      font-size: 2em;
     }
-
-    &__h3 {
-        padding-right: 20px;
+    &__subinfo{
+      font-size: 2em;
     }
+  }
 
-    &__h4 {
-        padding-right: 15px;
+    .wrapper2{
+    &__p {
+      font-size: 3em;
     }
->>>>>>> 0dfc616b22c2de775ef43c06899d2de9c6a998a0
+  }
+    .container2{
+
+     &__h4 {
+      font-size: 2em;
+     }
+    
+  
+    &__h5 {
+      font-size: 5em;
+    }
+    &__h6 {
+      font-size: 5em;
+    }
+  }
 }
