--- a/01-HTML-CSS/08-Responsive/Lior_project/FINAL/Lior_Project.scss
+++ b/01-HTML-CSS/08-Responsive/Lior_project/FINAL/Lior_Project.scss
@@ -1,4 +1,5 @@
 //navbar  start---------------------------------------------------------------------->
+
 *{
     margin: 0;
     padding: 0;
@@ -8,7 +9,7 @@
 
   .navbar
   {
-      width: 150%;
+      width: 170%;
       margin: 20px 50px;
       position: relative;
       left: 85px;
@@ -17,16 +18,26 @@
       &__car__CarPicture
       {
           position: relative;
-          left: 585px;
+          left: 625px;
           top: 70px;
           margin-right: 20px;
       }
+
+      @media only screen and (max-width: 1900PX )
+      {
+      &__car__CarPicture
+      {
+          position: relative;
+          left: 185px;
+          top: 70px;
+          margin-right: 20px;
+      }
+    }
   }
   
   nav
   {
-      position: absolute;
-      
+      position: absolute;   
   }
 
   nav> ul
@@ -38,11 +49,28 @@
     display: -o- flex;
     display: flex;
     justify-content: center;
-    width: 180%;
+    width: 190%;
     margin: 0 50px;
-    padding: 0;
-    
+    padding: 0; 
   }
+
+  @media only screen and (max-width: 1900PX )
+{
+    nav> ul
+    {
+      position: relative;
+      display: -webkit- flex;
+      display: -moz- flex;
+      display: -ms- flex;
+      display: -o- flex;
+      display: flex;
+      justify-content: center;
+      width: 90%;
+      margin: 0 50px;
+      padding: 0; 
+    }
+
+}
 
   nav a 
   {
@@ -170,7 +198,7 @@ nav ul.menu-area ul
 {
     width: 25%;
     margin-bottom: 40px;
-    margin-left: 0px;
+    margin-left: -10px;
     color: red;
     font-weight: 50px;
 }
@@ -199,7 +227,7 @@ nav ul.menu-area ul li a
     border: 1.8px solid rgb(189, 186, 186);
     align-content: center;
     height: 3.5vh;
-    width: 60%;
+    width: 69%;
     text-align: center;
 
     &:hover
@@ -373,7 +401,7 @@ nav ul.menu-area ul li a:hover
     grid-template-columns: repeat(6, 15vw);
     justify-content: center;
     gap: 7px;
-    margin: .5vh 60px 60px 60px;
+    margin: .8vh 60px 60px 60px;
     font-family: Arial Narrow, sans-serif;
     
 
