--- a/01-HTML-CSS/08-Responsive/Lior_project/FINAL/Lior_Project.scss
+++ b/01-HTML-CSS/08-Responsive/Lior_project/FINAL/Lior_Project.scss
@@ -33,6 +33,20 @@
           margin-right: 20px;
       }
     }
+
+    @media only screen and (max-width: 1200PX )
+
+    {
+        &__car__CarPicture
+        {
+            position: relative;
+            left: 75px;
+            top: 70px;
+            margin-right: 10px;
+            size: 10px;
+        } 
+    }
+
   }
   
   nav
@@ -67,6 +81,24 @@
       justify-content: center;
       width: 90%;
       margin: 0 50px;
+      padding: 0; 
+    }
+
+}
+
+@media only screen and (max-width: 1200PX )
+{
+    nav> ul
+    {
+      position: relative;
+      display: -webkit- flex;
+      display: -moz- flex;
+      display: -ms- flex;
+      display: -o- flex;
+      display: flex;
+      justify-content: center;
+      width: 170%;
+      margin: -10px -120px;
       padding: 0; 
     }
 
@@ -256,11 +288,24 @@ nav ul.menu-area ul li a:hover
 
 .Carousel_image
 {
-    width: 7vw;
+    width: 6vw;
     left: 50px;
     position: relative;
     border: 0.8px solid rgb(163, 158, 158);
     z-index: 2;
+}
+
+@media only screen and (max-width: 1200PX )
+{
+    .Carousel_image
+    {
+        width: 6vw;
+        left: 50px;
+        top: 9vh;
+        position: relative;
+        border: 0.8px solid rgb(163, 158, 158);
+        z-index: 2;
+    } 
 }
 
 
@@ -268,11 +313,11 @@ nav ul.menu-area ul li a:hover
 {
     overflow: hidden;
     z-index: 0;
-    height: 80vh;
+    height: 77vh;
     position: relative;
     width: 100%;
     display: block;
-    top: 200px;
+    top: 160px;
     margin: 50px auto;
     border: 3px solid rgb(95, 93, 93);
 
