--- a/01-HTML-CSS/09-animations/Plant App Leo Shani Alex/menu.scss
+++ b/01-HTML-CSS/09-animations/Plant App Leo Shani Alex/menu.scss
@@ -1,6 +1,8 @@
-    .body,html{
+    .body,
+    html {
         background-color: grey;
     }
+
     .text {
         text-align: center;
         color: rgb(61, 23, 23);
@@ -16,7 +18,6 @@
         justify-content: center;
         height: 500px;
 
-
         .item {
             border: 1px solid gray;
             width: 100px;
@@ -29,24 +30,50 @@
             }
         }
 
-
-        .item:nth-child(1) {}
-
-        .item:nth-child(2) {}
-
-        .item:nth-child(3) {}
+        img {
+            height: 90%;
+        }
     }
+
+
+    @media only screen and (max-width: 800px) {
+
+        .wrapper {
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            height: 200px;
+            width: 150px;
+            
+            position: relative;
+
+            div>a>img {
+                height: 30vh;
+                width: 50vw;
+            }
+
+            .item {
+                border: 1px solid gray;
+                flex: 1;
+                position: relative;
+                top: 40vh;
+
+                &:hover {
+                    img {
+                        height: 35vh;
+                    }
+                }
+            }
+        }
+    }
+
 
     @keyframes moveDown {
         from {
-            top: -10vw;
+            top: -4vw;
         }
 
         to {
             top: 0vw;
         }
-    }
-
-    img{
-        height: 90%;
     }
