--- a/01-HTML-CSS/09-animations/mishaschedule_v2/style3.scss
+++ b/01-HTML-CSS/09-animations/mishaschedule_v2/style3.scss
@@ -388,6 +388,9 @@ html {
             border: 8px solid #464E85;
             border-radius: 50px;
             margin-left: -10px;
+            &:hover{
+                cursor: pointer;
+            }
 
         }
 
